--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,4 @@
-<header class="page-header"  
-        role="banner">
+<header>
       <h1 class="project-name">Testing</h1>
 </header>
 <main id="content" class="main-content" role="main">
