--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,14 +10,13 @@
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
-      <h3 style="text-align: left; width:49%; display: inline-block;">
+      <div style="text-align: left; width:49%; display: inline-block;">
         <a href="{{ "/" | absolute_url }}">{{ site.title }}</a>
-      </h3>
-      <h3 style="text-align: right; width:50%;  display: inline-block;">
+      </div>
+      <div style="text-align: right; width:50%;  display: inline-block;">
         <a href="/blog/">blog</a>
-      </h3>
-      <hr>
-      
+      </div>
+      <hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
       {{ content }}
 
