--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,9 @@
   </head>
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
-      <div style="text-align: left; width:49%; display: inline-block;">
+      <div style="text-align: left;">
         <a href="{{ "/" | absolute_url }}">{{ site.title }}</a>
-      </div>
-      <div style="text-align: right; width:50%;  display: inline-block;">
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         <a href="/blog/">blog</a>
       </div>
       <hr style="height:1px;border:none;color:#333;background-color:#333;" />
