--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,9 +11,13 @@
   <body>
     <div class="container-lg px-3 my-5 markdown-body">
       <div style="text-align: left;">
-        <a href="{{ "/" | absolute_url }}">{{ site.title }}</a>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="{{ "/" | absolute_url }}">home</a>
+        &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="/research/">research</a>
+        &nbsp;&nbsp;|&nbsp;&nbsp;
         <a href="/blog/">blog</a>
+        &nbsp;&nbsp;|&nbsp;&nbsp;
+        <a href="/code/">code</a>
       </div>
       <hr style="height:1px;border:none;color:#333;background-color:#333;" />
 
